--- a/WebAssistanConector/appsettings.json
+++ b/WebAssistanConector/appsettings.json
@@ -9,7 +9,7 @@
   "Kestrel": {
     "Endpoints": {
       "Http": {
-        "Url": "http://192.168.1.18:5001" // Cambia el puerto si es necesario
+        "Url": "http://localhost:5000" // Cambia el puerto si es necesario
       }
     }
   }
